menu card added

--- a/pages/login.html
+++ b/pages/login.html
@@ -60,7 +60,7 @@
     <!--login form-->
     <div class="container">
         <div class="card login mx-auto my-5 shadow">
-            <h1 class="card-heading text-center">Login Form</h1>
+            <h1 class="card-heading text-center" id="heading">Login Form</h1>
             <div class="card-body">
                 <div class="form-group">
                     <input type="email" class="form-control" id="email" placeholder="Enter email" required>
