--- a/pages/menu.html
+++ b/pages/menu.html
@@ -94,6 +94,16 @@
         <div id="menu2" class="mt-4"></div>
     </div>
     <!--end of menu-->
+    <h1 class="text-center mt-5 mb-3 font-heading"> Menu Card</h1>
+    <div>
+        <img src="../images/menu2.jpg" id="menuimg" class="menuimg d-block mx-auto"/>
+    </div>
+
+    <div class="quantity">
+        <img src="../images/left.png" class="incdec mx-2" id="increment" onclick="dec()" />
+        <p id="quant" class="quant"> 1 </p>
+        <img src="../images/right.png" class="incdec mx-2" id="decrement" onclick="inc()" />
+    </div>
 
     <!--footer-->
     <div class="bg-dark bg-gradient text-light p-4">
