--- a/pages/pizza.html
+++ b/pages/pizza.html
@@ -98,15 +98,15 @@
         </div>
         <!--end of pizza container-->
         <p>Indulge in our mouthwatering pizza made with fresh ingredients and topped with your favorite flavors.</p>
-        <p>Cost per Pizza: ₹250/-</p>
-        <div class="d-flex flex-row justify-content-center">
+        <p>Cost per Pizza: <del>₹550/-</del> ₹250/-</p>
+        <div class="d-flex cost justify-content-center">
             <div class="col-auto me-2">
                 <input type="number" id="quantity" class="form-control" aria-describedby="passwordHelpInline"
                     min="1" placeholder="Enter the quantity">
             </div>
             <div class="col-auto">
                 <label for="inputPassword6" class="col-form-label">
-                    <p> Total Cost: <span id="total"><del>₹550/-</del> ₹250/-</span></p>
+                    <p> Total Cost: <span id="total"> ₹250/-</span></p>
                 </label>
             </div>
         </div>
