--- a/pages/burger.html
+++ b/pages/burger.html
@@ -92,7 +92,7 @@
         <!--end of pizza container-->
         <p>Savor the juiciest burgers in town at Cafe Evening – where every bite is a flavor explosion!</p>
         <p>Cost per Burger: ₹350/-</p>
-        <div class="d-flex flex-row justify-content-center">
+        <div class="d-flex cost justify-content-center">
             <div class="col-auto me-2">
                 <input type="number" id="quantity1" class="form-control" aria-describedby="passwordHelpInline"
                     min="1" placeholder="Enter the quantity">
