--- a/pages/mocktails.html
+++ b/pages/mocktails.html
@@ -94,7 +94,7 @@
         <!--end of pizza container-->
         <p>Elevate your evening with our exquisite mocktails at Café Evening – crafted to perfection for a taste of sophistication in every sip!</p>
         <p>Cost per Pizza: ₹120/-</p>
-        <div class="d-flex flex-row justify-content-center">
+        <div class="d-flex cost justify-content-center">
             <div class="col-auto me-2">
                 <input type="number" id="quantity5" class="form-control" aria-describedby="passwordHelpInline"
                     min="1" placeholder="Enter the quantity">
