--- a/pages/register.html
+++ b/pages/register.html
@@ -60,7 +60,7 @@
     <!--register form-->
     <div class="container">
         <div class="card login mx-auto my-5 shadow">
-            <h1 class="card-heading text-center">Registration Form</h1>
+            <h1 class="card-heading text-center" id="heading">Registration Form</h1>
             <div class="card-body">
                 <div class="form-group">
                     <input type="text" class="form-control" id="fullName" placeholder="Enter full name" required>
