changes in contact

--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -58,7 +58,17 @@
     <!--End of header-->
 
     <!--form-->
-    <div class="container background p-3 d-flex cntct">
+    <div class="container background p-3 d-flex cntct rounded mt-5">
+        <div class="d-flex flex-column justify-content-center">
+            <a class="fs-5 text-decoration-none text-dark"><i class="fa-solid fa-location-dot" style="color: black;"></i>
+                Biaf Road, Wagholi, Pune- 412207</a>
+            <br />
+            <a href="tel:7387882087" class="text-decoration-none text-dark fs-5"><i class="fa-solid fa-phone" style="color: black;"
+                ></i> +91 73878 82087</a><br />
+            <a href="mailto:admin@unityuplift.org" class="text-decoration-none text-dark fs-5"><i
+                    class="fa-solid fa-envelope" style="color: black;"></i>
+                admin@thecafeevening.org</a>
+        </div>
         <div class="card contact shadow">
             <h1 class="card-heading text-center" id="heading">Contact Form</h1>
             <div class="card-body">
@@ -72,9 +82,7 @@
                 </button>
             </div>
         </div>
-        <div class="rounded">
-            
-        </div>
+        
     </div>
 
     <div class="d-flex flex-column justify-content-center align-items-center ">
