--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -57,14 +57,32 @@
     </nav>
     <!--End of header-->
 
+    <!-- Page Header Start -->
+    <div class="headerstart">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-light font-heading fs-2">Contact</h2>
+                </div>
+                <div class="col-12">
+                    <a href="../index.html" class="text-light text-decoration-none">Home /</a>
+                    <a href="contactus.html" class="text-light text-decoration-none">Contact</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Page Header End -->
+
     <!--form-->
     <div class="container background p-3 d-flex cntct rounded mt-5">
         <div class="d-flex flex-column justify-content-center">
-            <a class="fs-5 text-decoration-none text-dark"><i class="fa-solid fa-location-dot" style="color: black;"></i>
+            <h1 class="fs-1 text-center font-heading">Contact Details</h1><br />
+            <a class="fs-5 text-decoration-none text-dark"><i class="fa-solid fa-location-dot"
+                    style="color: black;"></i>
                 Biaf Road, Wagholi, Pune- 412207</a>
             <br />
-            <a href="tel:7387882087" class="text-decoration-none text-dark fs-5"><i class="fa-solid fa-phone" style="color: black;"
-                ></i> +91 73878 82087</a><br />
+            <a href="tel:7387882087" class="text-decoration-none text-dark fs-5"><i class="fa-solid fa-phone"
+                    style="color: black;"></i> +91 73878 82087</a><br />
             <a href="mailto:admin@unityuplift.org" class="text-decoration-none text-dark fs-5"><i
                     class="fa-solid fa-envelope" style="color: black;"></i>
                 admin@thecafeevening.org</a>
@@ -82,27 +100,36 @@
                 </button>
             </div>
         </div>
-        
+
     </div>
 
-    <div class="d-flex flex-column justify-content-center align-items-center ">
-        <div class="card m-3 shadow p-3">
-            <h1 class="text-center font-heading mt-5">Rate Our Service</h1>
-            <div class="d-flex justify-content-center">
-                <img class="star" id="s1" src="../icon/star.png" alt="star_img" onclick="star(1)">
-                <img class="star" id="s2" src="../icon/star.png" alt="star_img" onclick="star(2)">
-                <img class="star" id="s3" src="../icon/star.png" alt="star_img" onclick="star(3)">
-                <img class="star" id="s4" src="../icon/star.png" alt="star_img" onclick="star(4)">
-                <img class="star" id="s5" src="../icon/star.png" alt="star_img" onclick="star(5)">
-            </div>
-
-            <h3 id="rating" class="text-center">
-                Rating is: 0/5
-            </h3>
-            <br />
-            <button type="button" class="btn btn-outline-dark" onclick="submit()">Submit</button>
+    <div class="container background p-3 d-flex cntct rounded mt-5">
+        <div>
+            <h1 class="text-center font-heading mt-5">Location</h1>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3781.986526390223!2d73.97598827423872!3d18.574646167522033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c3e11afd3c31%3A0x4e7e208a6fee82b5!2sThe%20Caf%C3%A9%20Evening!5e0!3m2!1sen!2sin!4v1715491194870!5m2!1sen!2sin"
+                style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-    </div>
+
+        <div class="d-flex flex-column justify-content-center align-items-center ">
+            <div class="card m-3 shadow p-3">
+                <h1 class="text-center font-heading mt-5">Rate Our Service</h1>
+                <div class="d-flex justify-content-center">
+                    <img class="star" id="s1" src="../icon/star.png" alt="star_img" onclick="star(1)">
+                    <img class="star" id="s2" src="../icon/star.png" alt="star_img" onclick="star(2)">
+                    <img class="star" id="s3" src="../icon/star.png" alt="star_img" onclick="star(3)">
+                    <img class="star" id="s4" src="../icon/star.png" alt="star_img" onclick="star(4)">
+                    <img class="star" id="s5" src="../icon/star.png" alt="star_img" onclick="star(5)">
+                </div>
+
+                <h3 id="rating" class="text-center">
+                    Rating is: 0/5
+                </h3>
+                <br />
+                <button type="button" class="btn btn-outline-dark" onclick="submit()">Submit</button>
+            </div>
+        </div>
     </div>
     <!--end of form-->
 
