about page updated

--- a/pages/coffe.html
+++ b/pages/coffe.html
@@ -78,14 +78,22 @@
         <h1 class="text-center fs-1 font-heading">Cold Coffe</h1>
         <!--pizza container-->
 
-        <div class="starter p-2 mx-5">            
+        <div class="starter p-2 mx-5"> 
+            <div>
+                <img src="../images/coldCoffe.jpg" class="mx-2 subimg2" />
+            </div>           
             <div>
                 <video height="480px" controls autoplay muted>
                     <source src="../video/coffe.mp4" type="video/mp4" />
                 </video>
             </div>
-            <div>
-                <img src="../images/coldCoffe.jpg" class="mx-2 subimg2" />
+            <div class="sub">
+                <div>
+                    <img src="../images/coldCoffe3.jpg" class="mx-2 subimg" />
+                </div>
+                <div>
+                    <img src="../images/coldCoffe4.jpg" class="mx-2 subimg" />
+                </div>
             </div>          
             
         </div>
