--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THE CAFE EVENING</title>
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/about.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -56,6 +57,88 @@
     </nav>
     <!--End of header-->
 
+    <!-- Page Header Start -->
+    <div class="headerstart">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-light font-heading fs-2">About Us</h2>
+                </div>
+                <div class="col-12">
+                    <a href="../index.html" class="text-light text-decoration-none">Home /</a>
+                    <a href="aboutus.html" class="text-light text-decoration-none">About Us</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Page Header End -->
+
+    <div class="container">
+        <h1 class="text-center my-3">Gallery</h1>
+        <div class="row d-flex gall1 mx-auto justify-content-evenly">
+            <div class="gallery-item col-md-3 card p-2 galley" onclick="event1()">
+                <img src="../images/bday1.jpg" alt="" class="img-fluid mb-2">
+                <h3 class="text-center font-heading fs-3">Events</h3>
+                <p class="text-muted"></p>
+            </div>
+            <div class="gallery-item col-md-3 card p-2 galley" onclick="cafe()">
+                <img src="../images/cafe1.jpg" alt="" class="img-fluid mb-2">
+                <h3 class="text-center font-heading fs-3">Cafe</h3>
+                <p class="text-muted"></p>
+            </div>
+            <div class="gallery-item col-md-3 card p-2 galley" onclick="rooftop()">
+                <img src="../images/roofTop1.jpg" alt="" class="img-fluid mb-2">
+                <h3 class="text-center font-heading fs-3">Roof Top</h3>
+                <p class="text-muted"></p>
+            </div>
+        </div>
+    </div>
+    <div id="imgss" class="gall mx-4 mt-3">
+        <div class="option">
+            <img src="../images/cafe4.jpg" class="gall-sm" onclick="gall4()" />
+            <img src="../images/cafe6.jpg" class="gall-sm" onclick="gall5()" />
+            <img src="../images/cafe1.jpg" class="gall-sm" onclick="gall6()" />
+        </div>
+        <img src="../images/cafe6.jpg" class="main-img" id="mainimg" />
+        <div class="option">
+            <img src="../images/cafe8.jpg" class="gall-sm" onclick="gall7()" />
+            <img src="../images/cafe2.jpg" class="gall-sm" onclick="gall8()" />
+            <img src="../images/cafe7.jpg" class="gall-sm" onclick="gall9()" />
+        </div>
+    </div>
+
+    
+
+
+    <h2 class="text-center fs-1 font-heading mt-5">Testimonials</h2>
+    <div class="test-card background">
+        <div>
+            <img src="../images/test1.jpg" class="test-img" id="test-image" />
+        </div>
+        <div class="test-text">
+            <h3 class="fs-3 text-danger" id="test-subheading">Great Place</h3>
+            <p class="card-text text-center" id="test-text">The ambiance at Café Evening is simply magical. From the
+                soft glow of the lights to the cozy seating arrangements, it's the perfect place to unwind after a long
+                day. And let's not forget the coffee – absolutely divine!
+            </p>
+            <p id="test-name" class="text-primary-emphasis">~Anjali Dhamdhere</p>
+        </div>
+    </div>
+    <div class="button-container">
+        <button type="button" class="selector" id="btn-1" onclick="test1()"> </button>
+        <button type="button" class="selector" id="btn-2" onclick="test2()"> </button>
+        <button type="button" class="selector" id="btn-3" onclick="test3()"> </button>
+        <button type="button" class="selector" id="btn-4" onclick="test4()"> </button>
+    </div><br />
+
+
+    <h2 class="text-center font-heading fs-1">Want to view our location?</h2>
+    <a href="https://shorturl.at/rwxEI" class="text-decoration-none">
+        <button type="button" class="btn btn-outline-dark d-block mx-auto m-3">
+            Click Here
+        </button>
+    </a>
+
     <!--footer-->
     <div class="bg-dark bg-gradient text-light p-4">
         <div class="row">
@@ -68,24 +151,28 @@
                 <div class="d-flex flex-row justify-content-evenly">
                     <div class="mt-2">
                         <a href="https://www.facebook.com/p/The-Cafe-Evening-100064168686089/" target="_blank"
-                            class="text-decoration-none text-light"><img class="contact-img" src="../icon/facebook.png" />
+                            class="text-decoration-none text-light"><img class="contact-img"
+                                src="../icon/facebook.png" />
                             Facebook</a><br />
                     </div>
                     <div class="mt-2">
                         <a href="https://www.instagram.com/thecafeevening/" target="_blank"
-                            class="text-decoration-none text-light"><img class="contact-img" src="../icon/instagram.png" />
+                            class="text-decoration-none text-light"><img class="contact-img"
+                                src="../icon/instagram.png" />
                             Instagram</a><br />
                     </div>
                     <div class="mt-2">
-                        <a href="https://www.justdial.com/Pune/The-Cafe-Evening-Near-Ivy-Estate-Wagholi/020PXX20-XX20-200108154050-J8H6_BZDET" target="_blank"
-                            class="text-decoration-none text-light"><img class="contact-img" src="../icon/justdial.png" />
+                        <a href="https://www.justdial.com/Pune/The-Cafe-Evening-Near-Ivy-Estate-Wagholi/020PXX20-XX20-200108154050-J8H6_BZDET"
+                            target="_blank" class="text-decoration-none text-light"><img class="contact-img"
+                                src="../icon/justdial.png" />
                             Justdial</a><br />
                     </div>
                 </div>
                 <div class="d-flex flex-row justify-content-evenly">
                     <div class="mt-2">
                         <a href="https://www.zomato.com/pune/the-cafe-evening-2-wagholi" target="_blank"
-                            class="text-decoration-none text-light"> <img class="contact-img" src="../icon/zomato.png" />
+                            class="text-decoration-none text-light"> <img class="contact-img"
+                                src="../icon/zomato.png" />
                             Zomato</a><br />
                     </div>
                     <div class="mt-2">
