--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -90,8 +90,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="../images/meal3.jpg" class="card-img-top" alt="...">
-                
+                <img src="../images/meal1(2).jpg" class="card-img-top" alt="...">                
               </div>
             </div>
           </div>
@@ -132,17 +131,17 @@
             <div class="gallery-item col-md-3 card p-2 galley" onclick="event1()">
                 <img src="../images/bday1zm.jpg" alt="" class="img-fluid mb-2">
                 <h3 class="text-center font-heading fs-3">Events</h3>
-                <p class="text-muted"> Events Condcted</p>
+                <p class="text-muted text-center"> Events Condcted</p>
             </div>
             <div class="gallery-item col-md-3 card p-2 galley" onclick="cafe()">
                 <img src="../images/cafe1.jpg" alt="" class="img-fluid mb-2">
                 <h3 class="text-center font-heading fs-3">Cafe</h3>
-                <p class="text-muted"> Cafe look</p>
+                <p class="text-muted text-center"> Cafe look</p>
             </div>
             <div class="gallery-item col-md-3 card p-2 galley" onclick="rooftop()">
                 <img src="../images/rooftop.jpg" alt="" class="img-fluid mb-2">
                 <h3 class="text-center font-heading fs-3">Roof Top</h3>
-                <p class="text-muted">Rooftop special</p>
+                <p class="text-muted text-center">Rooftop special</p>
             </div>
         </div>
     </div>
