--- a/pages/menu.html
+++ b/pages/menu.html
@@ -73,6 +73,20 @@
     </div>
     <!-- Page Header End -->
 
+    <div class="card text-center offercard " style="background-color: #ffff99;">
+        <div class="card-header ">
+            <p class="font-heading fs-2 text-primary-emphasis"> Limited Time Offer <span id="offer1"
+                class="badge text-bg-warning text rounded-pill"> Offer</span></p>
+        </div>
+        <div class="card-body">           
+            <p class="count fs-3 font-heading text-danger">Time left:<br /> <span id="countdown"></span> </p>
+            <a href="pizza.html" class="btn btn-outline-dark">Check Now</a>
+        </div>
+        <div class="card-footer text-body-secondary">
+            Valid till 30 May only
+        </div>
+    </div>
+
     <!--menu-->
     <div class="container">
         <h1 class="text-center mt-5">Cafe Evening Menu</h1>
@@ -85,7 +99,7 @@
                 <li><a class="dropdown-item" href="#drinks">Drinks</a></li>
                 <li><a class="dropdown-item" href="#food">Food</a></li>
             </ul>
-        </div><br/><br/>
+        </div><br /><br />
         <h2 class="text-center fs-2 font-heading bg-secondary bg-gradient text-light p-2 d-block mx-auto my-1"
             id="drinks">Drinks</h2>
         <div id="menu1" class="mt-4"></div>
@@ -96,7 +110,7 @@
     <!--end of menu-->
     <h1 class="text-center mt-5 mb-3 font-heading"> Menu Card</h1>
     <div>
-        <img src="../images/menu2.jpg" id="menuimg" class="menuimg d-block mx-auto"/>
+        <img src="../images/menu2.jpg" id="menuimg" class="menuimg d-block mx-auto" />
     </div>
 
     <div class="quantity">
