--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -103,6 +103,41 @@
 
     </div>
 
+
+    <h1 class="fs-1 font-heading text-center mt-5 mb-3">Frequently Asked Questions</h1>
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item rounded border shadow">
+          <h2 class="accordion-header">
+            <button class="accordion-button fs-5 collapsed bg-warning rounded" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+              What is the cafe location?
+            </button>
+          </h2>
+          <div id="flush-collapseOne" class="accordion-collapse collapse bg-body-tertiary" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body fs-6 text-center">The cafe is located on Biaf road, Wagholi Pune. </div>
+          </div>
+        </div>
+        <div class="accordion-item rounded border shadow">
+          <h2 class="accordion-header">
+            <button class="accordion-button fs-5 collapsed bg-warning rounded" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+              What do you offer in meals?
+            </button>
+          </h2>
+          <div id="flush-collapseTwo" class="accordion-collapse collapse bg-body-tertiary" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body fs-6 text-center">We offer pizza, burger, fries, mocktails, etc in our meals. You can check our menu.</div>
+          </div>
+        </div>
+        <div class="accordion-item rounded border shadow">
+          <h2 class="accordion-header">
+            <button class="accordion-button fs-5 collapsed bg-warning rounded" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+              Do you provide home delivery?
+            </button>
+          </h2>
+          <div id="flush-collapseThree" class="accordion-collapse collapse bg-body-tertiaryse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body fs-6 text-center">Yes, we provide home delivery. You can order by calling on <a href="tel:7387882087" class="text-decoration-none text-dark "><i class="fa-solid fa-phone"></i> +91 73878 82087</a> or order online by zomato, sWiggy, magicpin also.</div>
+          </div>
+        </div>
+      </div>
+
     <div class="container background p-3 d-flex cntct rounded mt-5">
         <div>
             <h1 class="text-center font-heading mt-5">Location</h1>
