--- a/index.html
+++ b/index.html
@@ -33,21 +33,18 @@
                         <a class="nav-link" href="pages/menu.html">Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="pages/events.html">Events</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="pages/contactus.html">Contact</a>
                     </li>
                 </ul>
             </div>
             <a href="pages/login.html">
                 <button class="btn" type="button">
-                    <img src="icon/avatar.png" height="50px" />
+                    <img src="icon/avatar.png" class="header-img" />
                 </button>
             </a>
             <div class="btn-group dropstart bg-light">
                 <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="icon/darklightmode.png" height="50px" />
+                    <img src="icon/darklightmode.png" class="header-img" />
                 </button>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" onclick="lightMode()"><i class="fa-solid fa-sun"
