--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!--menu-->
     <div class="container">
-        <h1 class="text-center mt-5">Cafe Evening Menu</h1>
+        <h1 class="text-center font-heading2 mt-5">Cafe Evening Menu</h1>
         <div id="menu" class="row mt-4"></div>
     </div>
 
@@ -77,7 +77,7 @@
 
     <!--startbox-->
 
-    <h2 class="font-heading text-center fs-2 text-dark mt-2"> About Us </h2>
+    <h2 class="font-heading2 text-center fs-2 text-dark mt-2"> About Us </h2>
     <div class="d-flex row m-4 background rounded">
         <div class="col-lg-4 col-md-12 col-sm-12 d-flex flex-column justify-content-center">
             <img src="images/outer.PNG" class="img-fluid rounded m-3" id="image-abt" onclick="change1()"
@@ -109,7 +109,7 @@
     <!--end of startbox-->
 
     <!--gallery-->
-    <h1 class="text-center fs-1 font-heading">Gallery</h1>
+    <h1 class="text-center fs-1 font-heading2">Gallery</h1>
     <div class="gall mx-4">
         <div class="option">
             <img src="images/people2.jpg" class="gall-sm" onclick="gall1()" />
@@ -126,7 +126,7 @@
     <!--end of gallery-->
 
     <!--testimonial-->
-    <h2 class="text-center fs-1 font-heading mt-5">Testimonials</h2>
+    <h2 class="text-center fs-1 font-heading2 mt-5">Testimonials</h2>
     <div class="test-card background">
         <div>
             <img src="images/test1.jpg" class="test-img" id="test-image" />
@@ -150,7 +150,7 @@
 
     <!--order-->
     <div class="mt-4">
-        <h1 class="text-center font-heading fs-1">Order / Connect</h1>
+        <h1 class="text-center font-heading2 fs-1">Order / Connect</h1>
         <div class="d-flex flex-row justify-content-evenly">
             <div class="my-2">
                 <a href="https://www.facebook.com/p/The-Cafe-Evening-100064168686089/" target="_blank"
