--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -73,7 +73,7 @@
     </div>
     <!-- Page Header End -->
 
-    <div class="background p-3 ">
+    <div class="background p-3 mt-5">
         <h1 class="text-center font-heading mt-3">About Us</h1>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
@@ -126,7 +126,7 @@
     
 
     <div class="container">
-        <h1 class="text-center font-heading my-3">Gallery</h1>
+        <h1 class="text-center font-heading2 my-3">Gallery</h1>
         <div class="row d-flex gall1 mx-auto justify-content-evenly">
             <div class="gallery-item col-md-3 card p-2 galley" onclick="event1()">
                 <img src="../images/bday1zm.jpg" alt="" class="img-fluid mb-2">
@@ -152,7 +152,7 @@
 
 
 
-    <h2 class="text-center fs-1 font-heading mt-5">Testimonials</h2>
+    <h2 class="text-center fs-1 font-heading2 mt-5">Testimonials</h2>
     <div class="test-card background">
         <div>
             <img src="../images/test1.jpg" class="test-img" id="test-image" />
@@ -174,8 +174,8 @@
     </div><br />
 
 
-    <h2 class="text-center font-heading fs-1">Want to view our location?</h2>
-    <a href="https://shorturl.at/rwxEI" class="text-decoration-none">
+    <h2 class="text-center font-heading2 fs-1">Want to view our location?</h2>
+    <a href="https://shorturl.at/rwxEI" class="text-decoration-none" target="_blank">
         <button type="button" class="btn btn-outline-dark d-block mx-auto m-3">
             Click Here
         </button>
