--- a/pages/login.html
+++ b/pages/login.html
@@ -57,25 +57,33 @@
     </nav>
     <!--End of header-->
 
-    <!--login form-->
-    <div class="container">
-        <div class="card login mx-auto my-5 shadow">
-            <h1 class="card-heading text-center" id="heading">Login Form</h1>
-            <div class="card-body">
-                <div class="form-group">
-                    <input type="email" class="form-control" id="email" placeholder="Enter email" required>
-                </div><br/>
-                <div class="form-group">
-                    <input type="password" class="form-control" id="password" placeholder="Enter password" required>
-                </div><br/>
-                <button type="button" class="btn btn-dark btn-block d-block mx-auto" onclick="validateLogin()">Log in</button>
-                <div class="text-center mt-3">
-                    Not a member? <a href="./register.html">Sign Up</a>
+    <!-- Page Header Start -->
+    <div class="headerstart">
+        <!--login form-->
+        <div class="container">
+            <div class="card login mx-auto shadow">
+                <h1 class="card-heading font-heading2 text-center" id="heading">Login Form</h1>
+                <div class="card-body">
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+                    </div><br />
+                    <div class="form-group">
+                        <input type="password" class="form-control" id="password" placeholder="Enter password" required>
+                    </div><br />
+                    <button type="button" class="btn btn-dark btn-block d-block mx-auto" onclick="validateLogin()">Log
+                        in</button>
+                    <div class="text-center mt-3">
+                        Not a member? <a href="./register.html">Sign Up</a>
+                    </div>
                 </div>
             </div>
         </div>
+        <!--end of login-->
+
     </div>
-    <!--end of login-->
+    <!-- Page Header End -->
+
+
 
     <!--footer-->
     <div class="bg-dark bg-gradient text-light p-4">
