--- a/pages/menu.html
+++ b/pages/menu.html
@@ -73,7 +73,7 @@
     </div>
     <!-- Page Header End -->
 
-    <div class="card text-center offercard " style="background-color: #ffff99;">
+    <div class="card text-center offercard mt-5" style="background-color: #ffff99;">
         <div class="card-header ">
             <p class="font-heading fs-2 text-primary-emphasis"> Limited Time Offer <span id="offer1"
                 class="badge text-bg-warning text rounded-pill"> Offer</span></p>
@@ -89,7 +89,7 @@
 
     <!--menu-->
     <div class="container">
-        <h1 class="text-center mt-5">Cafe Evening Menu</h1>
+        <h1 class="text-center font-heading mt-5">Cafe Evening Menu</h1>
         <div class="dropdown float-end">
             <button class="btn btn-secondary dropdown-toggle " type="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -100,15 +100,15 @@
                 <li><a class="dropdown-item" href="#food">Food</a></li>
             </ul>
         </div><br /><br />
-        <h2 class="text-center fs-2 font-heading bg-secondary bg-gradient text-light p-2 d-block mx-auto my-1"
+        <h2 class="text-center fs-2 font-heading2 bg-secondary bg-gradient text-light p-2 d-block mx-auto my-1"
             id="drinks">Drinks</h2>
         <div id="menu1" class="mt-4"></div>
-        <h2 class="text-center fs-2 font-heading bg-secondary bg-gradient text-light p-2 d-block mx-auto" id="food">Food
+        <h2 class="text-center fs-2 font-heading2 bg-secondary bg-gradient text-light p-2 d-block mx-auto" id="food">Food
         </h2>
         <div id="menu2" class="mt-4"></div>
     </div>
     <!--end of menu-->
-    <h1 class="text-center mt-5 mb-3 font-heading"> Menu Card</h1>
+    <h1 class="text-center mt-5 mb-3 font-heading2"> Menu Card</h1>
     <div>
         <img src="../images/menu2.jpg" id="menuimg" class="menuimg d-block mx-auto" />
     </div>
