--- a/pages/register.html
+++ b/pages/register.html
@@ -57,28 +57,31 @@
     </nav>
     <!--End of header-->
 
-    <!--register form-->
-    <div class="container">
-        <div class="card login mx-auto my-5 shadow">
-            <h1 class="card-heading text-center" id="heading">Registration Form</h1>
-            <div class="card-body">
-                <div class="form-group">
-                    <input type="text" class="form-control" id="fullName" placeholder="Enter full name" required>
-                </div><br/>
-                <div class="form-group">
-                    <input type="email" class="form-control" id="email" placeholder="Enter email" required>
-                </div><br/>
-                <div class="form-group">
-                    <input type="password" class="form-control" id="password" placeholder="Enter password" required>
-                </div><br/>
-                <button type="button" class="btn btn-dark btn-block d-block mx-auto" onclick="validateRegistration()">Register</button>
-                <div class="text-center mt-3">
-                    Already a member? <a href="./login.html">Log In</a>
+    <!-- Page Header Start -->
+    <div class="headerstart">
+        <!--register form-->
+            <div class="card login mx-auto shadow">
+                <h1 class="card-heading font-heading2 text-center" id="heading">Registration Form</h1>
+                <div class="card-body">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="fullName" placeholder="Enter full name" required>
+                    </div><br />
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="email" placeholder="Enter email" required>
+                    </div><br />
+                    <div class="form-group">
+                        <input type="password" class="form-control" id="password" placeholder="Enter password" required>
+                    </div><br />
+                    <button type="button" class="btn btn-dark btn-block d-block mx-auto"
+                        onclick="validateRegistration()">Register</button>
+                    <div class="text-center mt-3">
+                        Already a member? <a href="./login.html">Log In</a>
+                    </div>
                 </div>
             </div>
-        </div>
+        <!--end of register-->
     </div>
-    <!--end of register-->
+    <!-- Page Header End -->
 
     <!--footer-->
     <div class="bg-dark bg-gradient text-light p-4">
