--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -88,7 +88,7 @@
                 admin@thecafeevening.org</a>
         </div>
         <div class="card contact shadow">
-            <h1 class="card-heading text-center" id="heading">Contact Form</h1>
+            <h1 class="card-heading text-center font-heading2" id="heading">Contact Form</h1>
             <div class="card-body">
                 <div class="form-group">
                     <input type="email" class="form-control" id="email" placeholder="Enter email" required>
@@ -104,7 +104,7 @@
     </div>
 
 
-    <h1 class="fs-1 font-heading text-center mt-5 mb-3">Frequently Asked Questions</h1>
+    <h1 class="fs-1 font-heading2 text-center mt-5 mb-3">Frequently Asked Questions</h1>
     <div class="accordion accordion-flush" id="accordionFlushExample">
         <div class="accordion-item rounded border shadow">
           <h2 class="accordion-header">
@@ -139,14 +139,6 @@
       </div>
 
     <div class="container background p-3 d-flex cntct rounded mt-5">
-        <div>
-            <h1 class="text-center font-heading mt-5">Location</h1>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3781.986526390223!2d73.97598827423872!3d18.574646167522033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c3e11afd3c31%3A0x4e7e208a6fee82b5!2sThe%20Caf%C3%A9%20Evening!5e0!3m2!1sen!2sin!4v1715491194870!5m2!1sen!2sin"
-                style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-
         <div class="d-flex flex-column justify-content-center align-items-center ">
             <div class="card m-3 shadow p-3">
                 <h1 class="text-center font-heading mt-5">Rate Our Service</h1>
@@ -165,6 +157,15 @@
                 <button type="button" class="btn btn-outline-dark" onclick="submit()">Submit</button>
             </div>
         </div>
+        <div>
+            <h1 class="text-center font-heading2 mt-5">Location</h1>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3781.986526390223!2d73.97598827423872!3d18.574646167522033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c3e11afd3c31%3A0x4e7e208a6fee82b5!2sThe%20Caf%C3%A9%20Evening!5e0!3m2!1sen!2sin!4v1715491194870!5m2!1sen!2sin"
+                style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+        
     </div>
     <!--end of form-->
 
