contact page updated

--- a/pages/login.html
+++ b/pages/login.html
@@ -58,9 +58,8 @@
     <!--End of header-->
 
     <!-- Page Header Start -->
-    <div class="headerstart">
+    <div class="headerstarts">
         <!--login form-->
-        <div class="container">
             <div class="card login mx-auto shadow">
                 <h1 class="card-heading font-heading2 text-center" id="heading">Login Form</h1>
                 <div class="card-body">
@@ -77,7 +76,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        
         <!--end of login-->
 
     </div>
