--- a/pages/register.html
+++ b/pages/register.html
@@ -58,7 +58,7 @@
     <!--End of header-->
 
     <!-- Page Header Start -->
-    <div class="headerstart">
+    <div class="headerstarts">
         <!--register form-->
             <div class="card login mx-auto shadow">
                 <h1 class="card-heading font-heading2 text-center" id="heading">Registration Form</h1>
