--- a/pages/contactus.html
+++ b/pages/contactus.html
@@ -74,17 +74,17 @@
     <!-- Page Header End -->
 
     <!--form-->
-    <div class="container background p-3 d-flex cntct rounded mt-5">
+    <div class="container background back-img p-3 d-flex cntct rounded mt-5">
         <div class="d-flex flex-column justify-content-center">
-            <h1 class="fs-1 text-center font-heading">Contact Details</h1><br />
-            <a class="fs-5 text-decoration-none text-dark"><i class="fa-solid fa-location-dot"
-                    style="color: black;"></i>
+            <h1 class="fs-1 text-center text-light font-heading">Contact Details</h1><br />
+            <a class="fs-5 text-decoration-none text-light"><i class="fa-solid fa-location-dot"
+                    style="color: white;"></i>
                 Biaf Road, Wagholi, Pune- 412207</a>
             <br />
-            <a href="tel:7387882087" class="text-decoration-none text-dark fs-5"><i class="fa-solid fa-phone"
-                    style="color: black;"></i> +91 73878 82087</a><br />
-            <a href="mailto:admin@unityuplift.org" class="text-decoration-none text-dark fs-5"><i
-                    class="fa-solid fa-envelope" style="color: black;"></i>
+            <a href="tel:7387882087" class="text-decoration-none text-light fs-5"><i class="fa-solid fa-phone"
+                    style="color: white;"></i> +91 73878 82087</a><br />
+            <a href="mailto:admin@unityuplift.org" class="text-decoration-none text-light fs-5"><i
+                    class="fa-solid fa-envelope" style="color: white;"></i>
                 admin@thecafeevening.org</a>
         </div>
         <div class="card contact shadow">
@@ -104,11 +104,11 @@
     </div>
 
 
-    <h1 class="fs-1 font-heading2 text-center mt-5 mb-3">Frequently Asked Questions</h1>
+    <h1 class="fs-1 font-heading2 text-center mt-5 mb-4">Frequently Asked Questions</h1>
     <div class="accordion accordion-flush" id="accordionFlushExample">
         <div class="accordion-item rounded border shadow">
           <h2 class="accordion-header">
-            <button class="accordion-button fs-5 collapsed bg-warning rounded" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+            <button class="accordion-button fs-5 collapsed rounded" style="background-color: #ffff66;" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
               What is the cafe location?
             </button>
           </h2>
@@ -118,7 +118,7 @@
         </div>
         <div class="accordion-item rounded border shadow">
           <h2 class="accordion-header">
-            <button class="accordion-button fs-5 collapsed bg-warning rounded" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+            <button class="accordion-button fs-5 collapsed rounded" style="background-color: #ffff66;" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
               What do you offer in meals?
             </button>
           </h2>
@@ -128,7 +128,7 @@
         </div>
         <div class="accordion-item rounded border shadow">
           <h2 class="accordion-header">
-            <button class="accordion-button fs-5 collapsed bg-warning rounded" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            <button class="accordion-button fs-5 collapsed rounded" style="background-color: #ffff66;" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
               Do you provide home delivery?
             </button>
           </h2>
@@ -138,7 +138,7 @@
         </div>
       </div>
 
-    <div class="container background p-3 d-flex cntct rounded mt-5">
+    <div class="container back-img background p-3 d-flex cntct rounded mt-5">
         <div class="d-flex flex-column justify-content-center align-items-center ">
             <div class="card m-3 shadow p-3">
                 <h1 class="text-center font-heading mt-5">Rate Our Service</h1>
@@ -158,7 +158,7 @@
             </div>
         </div>
         <div>
-            <h1 class="text-center font-heading2 mt-5">Location</h1>
+            <h1 class="text-center text-light font-heading2 mt-5">Location</h1>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3781.986526390223!2d73.97598827423872!3d18.574646167522033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c3e11afd3c31%3A0x4e7e208a6fee82b5!2sThe%20Caf%C3%A9%20Evening!5e0!3m2!1sen!2sin!4v1715491194870!5m2!1sen!2sin"
                 style="border:0;" allowfullscreen="" loading="lazy"
