--- a/pages/burger.html
+++ b/pages/burger.html
@@ -33,6 +33,9 @@
                         <a class="nav-link active" aria-current="page" href="menu.html">Menu</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="order.html">Order</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="contactus.html">Contact</a>
                     </li>
                 </ul>
