--- a/pages/login.html
+++ b/pages/login.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="aboutus.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="menu.html">Menu</a>
+                        <a class="nav-link" href="order.html">Order</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contactus.html">Contact</a>
