--- a/pages/order.html
+++ b/pages/order.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="../css/login.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <style>
+            .summary-section {
+            margin-top: 20px;
+            display: none;
+        }
+        </style>
 </head>
 
 <body id="body">
@@ -76,28 +82,24 @@
     </div>
     <!-- Page Header End -->
 
-    <div class="container">
-        <h1>Order Form</h1>
+    <h1 class="font-heading text-center fs-1 mt-5 mb-3">Order Form</h1>
+    <div class="container background p-3">
         <form id="orderForm">
-            <fieldset>
-                <legend>Personal Details</legend>
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" class="form-control" id="name" required>
+            <div class="">
+                <h2 class="font-heading2 text-center fs-2">Personal Details</h2>
+                <div class="form-group m-3">
+                    <input type="text" class="form-control" id="name" required placeholder="Name">
                 </div>
-                <div class="form-group">
-                    <label for="address">Address</label>
-                    <input type="text" class="form-control" id="address" required>
+                <div class="form-group m-3">
+                    <input type="text" class="form-control" id="address" required placeholder="Address">
                 </div>
-                <div class="form-group">
-                    <label for="pincode">Pincode</label>
-                    <input type="text" class="form-control" id="pincode" required>
+                <div class="form-group m-3">
+                    <input type="text" class="form-control" id="pincode" required placeholder="Pincode">
                 </div>
-            </fieldset>
-            <fieldset>
-                <legend>Menu</legend>
-                <div class="form-group">
-                    <label for="drinks">Drinks</label>
+            </div>
+            <div>
+                <h2 class="font-heading2 text-center fs-2">Menu</h2>
+                <div class="form-group m-3">
                     <select class="form-control" id="drinks">
                         <option value="">Select Drink</option>
                         <option value="Cold Coffee">Cold Coffee - ₹80</option>
@@ -122,12 +124,13 @@
                     <label for="food-quantity">Food Quantity</label>
                     <input type="number" class="form-control" id="food-quantity" min="1">
                 </div>
-            </fieldset>
-            <button type="button" class="btn btn-primary" id="submitOrder">Submit Order</button>
+            </div>
+            <button type="button" class="btn btn-outline-danger d-block mx-auto" id="submitOrder">Submit Order</button>
         </form>
-
+    </div>
+    <h2 class="text-center fs-1 font-heading mt-3">Your Orders</h2>
+    <div class="container background p-3">
         <div class="order-section">
-            <h2>Your Orders</h2>
             <table class="table table-bordered order-table">
                 <thead>
                     <tr>
@@ -140,12 +143,16 @@
                 </thead>
                 <tbody id="orderList"></tbody>
             </table>
+            <div id="totalSection">
+                <p class="text-center fs-3"><b>Total:</b> ₹<span id="totalCostValue">0</span>/-</p>
+            </div>
         </div>
+        
 
-        <button type="button" class="btn btn-success" id="placeOrder">Place Order</button>
+        <button type="button" class="btn btn-outline-success d-block mx-auto my-2" id="placeOrder">Place Order</button>
 
         <div class="summary-section" id="orderSummary">
-            <h2>Order Summary</h2>
+            <h2 class="text-center fs-2 font-heading2">Order Summary</h2>
             <p id="orderMessage"></p>
             <table class="table table-bordered">
                 <thead>
