--- a/pages/order.html
+++ b/pages/order.html
@@ -125,7 +125,7 @@
                     <input type="number" class="form-control" id="food-quantity" min="1">
                 </div>
             </div>
-            <button type="button" class="btn btn-outline-danger d-block mx-auto" id="submitOrder">Submit Order</button>
+            <button type="button" class="btn btn-outline-danger d-block mx-auto my-3" id="submitOrder">Submit Order</button>
         </form>
     </div>
     <h2 class="text-center fs-1 font-heading mt-3">Your Orders</h2>
