--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="pages/menu.html">Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="order.html">Order</a>
+                        <a class="nav-link" href="pages/order.html">Order</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="pages/contactus.html">Contact</a>
