--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
     </div>
 
     <a href="pages/menu.html" class="text-decoration-none"><button type="button"
-            class="btn btn-outline-dark btn-lg d-block mx-auto">View more Items</button></a>
+            class="btn btn-warning text-dark btn-lg d-block mx-auto">View more Items</button></a>
             <br/>
     <!--end of menu-->
 
     <!--startbox-->
 
-    <h2 class="font-heading2 text-center fs-2 text-dark mt-2"> About Us </h2>
+    <h2 class="font-heading2 text-center fs-2  mt-2"> About Us </h2>
     <div class="d-flex row m-4 background rounded">
         <div class="col-lg-4 col-md-12 col-sm-12 d-flex flex-column justify-content-center">
             <img src="images/outer.PNG" class="img-fluid rounded m-3" id="image-abt" onclick="change1()"
