--- a/pages/order.html
+++ b/pages/order.html
@@ -7,6 +7,7 @@
     <title>THE CAFE EVENING</title>
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/login.css" />
+    <link rel="stylesheet" href="../css/contact.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <style>
@@ -83,10 +84,10 @@
     <!-- Page Header End -->
 
     <h1 class="font-heading text-center fs-1 mt-5 mb-3">Order Form</h1>
-    <div class="container background p-3">
+    <div class="container background p-3 back-img">
         <form id="orderForm">
             <div class="">
-                <h2 class="font-heading2 text-center fs-2">Personal Details</h2>
+                <h2 class="font-heading2 text-center text-light fs-2">Personal Details</h2>
                 <div class="form-group m-3">
                     <input type="text" class="form-control" id="name" required placeholder="Name">
                 </div>
@@ -98,7 +99,7 @@
                 </div>
             </div>
             <div>
-                <h2 class="font-heading2 text-center fs-2">Menu</h2>
+                <h2 class="font-heading2 text-center text-light fs-2">Menu</h2>
                 <div class="form-group m-3">
                     <select class="form-control" id="drinks">
                         <option value="">Select Drink</option>
@@ -107,11 +108,11 @@
                     </select>
                 </div>
                 <div class="form-group" id="drink-quantity-section" style="display: none;">
-                    <label for="drink-quantity">Drink Quantity</label>
+                    <label for="drink-quantity" class="text-light">Drink Quantity</label>
                     <input type="number" class="form-control" id="drink-quantity" min="1">
                 </div>
                 <div class="form-group" id="food-section" style="display: none;">
-                    <label for="food">Food</label>
+                    <label for="food" class="text-light">Food</label>
                     <select class="form-control" id="food">
                         <option value="">Select Food</option>
                         <option value="Pizza">Pizza - ₹250</option>
@@ -121,11 +122,11 @@
                     </select>
                 </div>
                 <div class="form-group" id="food-quantity-section" style="display: none;">
-                    <label for="food-quantity">Food Quantity</label>
+                    <label for="food-quantity" class="text-light">Food Quantity</label>
                     <input type="number" class="form-control" id="food-quantity" min="1">
                 </div>
             </div>
-            <button type="button" class="btn btn-outline-danger d-block mx-auto my-3" id="submitOrder">Submit Order</button>
+            <button type="button" class="btn btn-outline-warning d-block mx-auto my-3" id="submitOrder">Submit Order</button>
         </form>
     </div>
     <h2 class="text-center fs-1 font-heading mt-3">Your Orders</h2>
