menu section modified

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -79,9 +79,9 @@
     <div class="card text-center offercard mt-5" style="background-color: #ffff99;">
         <div class="card-header ">
             <p class="font-heading fs-2 text-primary-emphasis"> Limited Time Offer <span id="offer1"
-                class="badge text-bg-warning text rounded-pill"> Offer</span></p>
+                    class="badge text-bg-warning text rounded-pill"> Offer</span></p>
         </div>
-        <div class="card-body">           
+        <div class="card-body">
             <p class="count fs-3 font-heading text-danger">Time left:<br /> <span id="countdown"></span> </p>
             <a href="pizza.html" class="btn btn-outline-dark">Check Now</a>
         </div>
@@ -106,14 +106,23 @@
         <h2 class="text-center fs-2 font-heading2 bg-secondary bg-gradient text-light p-2 d-block mx-auto my-1"
             id="drinks">Drinks</h2>
         <div id="menu1" class="mt-4"></div>
-        <h2 class="text-center fs-2 font-heading2 bg-secondary bg-gradient text-light p-2 d-block mx-auto" id="food">Food
+        <h2 class="text-center fs-2 font-heading2 bg-secondary bg-gradient text-light p-2 d-block mx-auto" id="food">
+            Food
         </h2>
         <div id="menu2" class="mt-4"></div>
     </div>
     <!--end of menu-->
     <h1 class="text-center mt-5 mb-3 font-heading2"> Menu Card</h1>
-    <div>
-        <img src="../images/menu2.jpg" id="menuimg" class="menuimg d-block mx-auto" />
+    <div class="d-flex flex-row justify-content-center">
+        <div class="cent starter">
+            <img src="../images/menu2.jpg" id="menuimg1" class="menuimg2 d-block my-auto"/>
+        </div>
+        <div class=" starter">
+            <img src="../images/menu2.jpg" id="menuimg2" class="menuimg d-block mx-3" />
+        </div>
+        <div class="cent starter">
+            <img src="../images/menu3.jpg" id="menuimg3" class="menuimg2 d-block my-auto"/>
+        </div>
     </div>
 
     <div class="quantity">
