--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@
                 Established in 2018 by Akash Agrawal, Cafe Evening is a cozy retreat nestled in the heart of Biaf Road,
                 Wagholi.
                 We pride ourselves on offering a warm and inviting atmosphere where friends, families, and colleagues
-                can
-                gather
-                to unwind and indulge in delectable treats.
+                can gather to unwind and indulge in delectable treats.
             </p>
             <p class="text-center fs-6 m-2">
                 At Cafe Evening, we're passionate about serving quality coffee, mouthwatering snacks, and delightful
