--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -178,7 +178,7 @@
 
 
     <h2 class="text-center font-heading2 fs-1">Want to view our location?</h2>
-    <a href="https://shorturl.at/rwxEI" class="text-decoration-none" target="_blank">
+    <a href="https://www.google.com/maps/place/The+Caf%C3%A9+Evening/@18.574654,73.9785304,3a,75y,68.22h,91.76t/data=!3m7!1e1!3m5!1sw9444K8w8z2S1_2bJUQgSw!2e0!6shttps:%2F%2Fstreetviewpixels-pa.googleapis.com%2Fv1%2Fthumbnail%3Fpanoid%3Dw9444K8w8z2S1_2bJUQgSw%26cb_client%3Dsearch.gws-prod.gps%26w%3D211%26h%3D120%26yaw%3D122.207954%26pitch%3D0%26thumbfov%3D100!7i13312!8i6656!4m14!1m7!3m6!1s0x3bc2c3e11afd3c31:0x4e7e208a6fee82b5!2sThe+Caf%C3%A9+Evening!8m2!3d18.5746411!4d73.9785632!16s%2Fg%2F11h24f96qq!3m5!1s0x3bc2c3e11afd3c31:0x4e7e208a6fee82b5!8m2!3d18.5746411!4d73.9785632!16s%2Fg%2F11h24f96qq?coh=205409&entry=ttu&g_ep=EgoyMDI0MDgyMS4wIKXMDSoASAFQAw%3D%3D" class="text-decoration-none" target="_blank">
         <button type="button" class="btn btn-outline-dark d-block mx-auto m-3">
             Click Here
         </button>
