--- a/pages/menu.html
+++ b/pages/menu.html
@@ -115,13 +115,13 @@
     <h1 class="text-center mt-5 mb-3 font-heading2"> Menu Card</h1>
     <div class="d-flex flex-row justify-content-center">
         <div class="cent starter">
-            <img src="../images/menu2.jpg" id="menuimg1" class="menuimg2 d-block my-auto"/>
+            <img src="../images/menu2.jpg" id="menuimg1" class="menuimg2 "/>
         </div>
         <div class=" starter">
             <img src="../images/menu2.jpg" id="menuimg2" class="menuimg d-block mx-3" />
         </div>
         <div class="cent starter">
-            <img src="../images/menu3.jpg" id="menuimg3" class="menuimg2 d-block my-auto"/>
+            <img src="../images/menu3.jpg" id="menuimg3" class="menuimg2 "/>
         </div>
     </div>
 
